==> SiliconLabsSoftware/third_party_hw_drivers_extension/driver/public/silabs/accelerometer_mma8452q/src/mma8452q.c <==
#include <mma8452q.h>
#include "sl_sleeptimer.h"
#include "mma8452q_config.h"
#define  MMA8452Q_STATUS            0x00
#define  MMA8452Q_OUT_X_MSB         0x01
#define  MMA8452Q_OUT_X_LSB         0x02
#define  MMA8452Q_OUT_Y_MSB         0x03
#define  MMA8452Q_OUT_Y_LSB         0x04
#define  MMA8452Q_OUT_Z_MSB         0x05
#define  MMA8452Q_OUT_Z_LSB         0x06
#define  MMA8452Q_SYSMOD            0x0B
#define  MMA8452Q_INT_SOURCE        0x0C
#define  MMA8452Q_WHO_AM_I          0x0D
#define  MMA8452Q_XYZ_DATA_CFG      0x0E
#define  MMA8452Q_HP_FILTER_CUTOFF  0x0F
#define  MMA8452Q_PL_STATUS         0x10
#define  MMA8452Q_PL_CFG            0x11
#define  MMA8452Q_PL_COUNT          0x12
#define  MMA8452Q_PL_BF_ZCOMP       0x13
#define  MMA8452Q_P_L_THS_REG       0x14
#define  MMA8452Q_FF_MT_CFG         0x15
#define  MMA8452Q_FF_MT_SRC         0x16
#define  MMA8452Q_FF_MT_THS         0x17
#define  MMA8452Q_FF_MT_COUNT       0x18
#define  MMA8452Q_TRANSIENT_CFG     0x1D
#define  MMA8452Q_TRANSIENT_SRC     0x1E
#define  MMA8452Q_TRANSIENT_THS     0x1F
#define  MMA8452Q_TRANSIENT_COUNT   0x20
#define  MMA8452Q_PULSE_CFG         0x21
#define  MMA8452Q_PULSE_SRC         0x22
#define  MMA8452Q_PULSE_THSX        0x23
#define  MMA8452Q_PULSE_THSY        0x24
#define  MMA8452Q_PULSE_THSZ        0x25
#define  MMA8452Q_PULSE_TMLT        0x26
#define  MMA8452Q_PULSE_LTCY        0x27
#define  MMA8452Q_PULSE_WIND        0x28
#define  MMA8452Q_ASLP_COUNT        0x29

sl_status_t mma8452q_init(mikroe_i2c_handle_t inst)
{
  sl_status_t status = SL_STATUS_OK;
  i2c_master_config_t i2c_cfg;
  uint8_t temp = 0;

  // If already initialized, return status
  if (mma8452q_is_initialized == true) {
    return SL_STATUS_ALREADY_INITIALIZED;
  }

  // Check for Null pointer
  if (inst == NULL) {
    return SL_STATUS_INVALID_PARAMETER;
  }

  mma8452q_handle.i2c.handle = inst;
  i2c_master_configure_default(&i2c_cfg);

  i2c_cfg.addr = SL_MMA8452Q_I2C_BUS_ADDRESS2;

#if (SPARKFUN_MMA8452Q_I2C_UC == 1)
  i2c_cfg.speed = SPARKFUN_MMA8452Q_I2C_SPEED_MODE;
#endif

  if (i2c_master_open(&mma8452q_handle.i2c, &i2c_cfg) == I2C_MASTER_ERROR) {
    return SL_STATUS_INITIALIZATION;
  }

  i2c_master_set_speed(&mma8452q_handle.i2c, i2c_cfg.speed);
  i2c_master_set_timeout(&mma8452q_handle.i2c, 0);

  mma8452q_is_initialized = true;

  // Check WHO_AM_I register
  status = mma8452q_read_register(MMA8452Q_WHO_AM_I, &temp);

  if (status == SL_STATUS_TRANSMIT) {
    return SL_STATUS_INVALID_PARAMETER;
  }
  if (temp != SL_MMA8452Q_DEVICE_ID) {
    return SL_STATUS_NOT_FOUND;
  }

  if (status != SL_STATUS_OK) {
    return SL_STATUS_TRANSMIT;
  }

  return SL_STATUS_OK;
}

sl_status_t mma8452q_deinit(void)
{
  sl_status_t status = SL_STATUS_OK;

  if (mma8452q_is_initialized == false) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  // Reset device
  status = mma8452q_write_register(MMA8452Q_CTRL_REG2, 0x40);

  // Must to wait after reset device
  sl_sleeptimer_delay_millisecond(1);

  status |= mma8452q_active(false);
  mma8452q_is_initialized = false;

  if (status != SL_STATUS_OK) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t mma8452q_read_register(uint8_t addr, uint8_t *data)
{
  if (mma8452q_is_initialized == false) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  if (data == NULL) {
    return SL_STATUS_INVALID_PARAMETER;
  }

  if (I2C_MASTER_SUCCESS != i2c_master_write_then_read(&mma8452q_handle.i2c,
                                                       &addr,
                                                       1,
                                                       data,
                                                       1)) {
    return SL_STATUS_TRANSMIT;
  }

  return SL_STATUS_OK;
}

sl_status_t mma8452q_write_register(uint8_t addr, uint8_t data)
{
  if (mma8452q_is_initialized == false) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  uint8_t i2c_write_data[2] = { addr, data };

  if (I2C_MASTER_SUCCESS != i2c_master_write(&mma8452q_handle.i2c,
                                             i2c_write_data,
                                             2)) {
    return SL_STATUS_TRANSMIT;
  }

  return SL_STATUS_OK;
}

sl_status_t mma8452q_read_block(uint8_t addr, uint8_t num_bytes, uint8_t *data)
{
  if (mma8452q_is_initialized == false) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  if (data == NULL) {
    return SL_STATUS_INVALID_PARAMETER;
  }

  if (I2C_MASTER_SUCCESS != i2c_master_write_then_read(&mma8452q_handle.i2c,
                                                       &addr,
                                                       1,
                                                       data,
                                                       num_bytes)) {
    return SL_STATUS_TRANSMIT;
  }

  return SL_STATUS_OK;
}

sl_status_t mma8452q_write_block(uint8_t addr, uint8_t num_bytes, uint8_t *data)
{
  if (mma8452q_is_initialized == false) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  if (NULL == data) {
    return SL_STATUS_INVALID_PARAMETER;
  }

  uint8_t i2c_write_data[num_bytes + 1];
  i2c_write_data[0] = addr;

  for (uint8_t i = 0; i < num_bytes; i++)
  {
    i2c_write_data[i + 1] = *(data + i);
  }

  err_t stt = i2c_master_write(&mma8452q_handle.i2c,
                               i2c_write_data,
                               num_bytes + 1);

  if (I2C_MASTER_SUCCESS != stt) {
    return SL_STATUS_TRANSMIT;
  }

  return SL_STATUS_OK;
}
