==> SiliconLabs/third_party_hw_drivers_extension/driver/public/silabs/accelerometer_mma8452q/src/mma8452q.c <==
#include <mma8452q.h>
#include <string.h>
#include <sl_udelay.h>
#define  MMA8452Q_STATUS            0x00
#define  MMA8452Q_OUT_X_MSB         0x01
#define  MMA8452Q_OUT_X_LSB         0x02
#define  MMA8452Q_OUT_Y_MSB         0x03
#define  MMA8452Q_OUT_Y_LSB         0x04
#define  MMA8452Q_OUT_Z_MSB         0x05
#define  MMA8452Q_OUT_Z_LSB         0x06
#define  MMA8452Q_SYSMOD            0x0B
#define  MMA8452Q_INT_SOURCE        0x0C
#define  MMA8452Q_WHO_AM_I          0x0D
#define  MMA8452Q_XYZ_DATA_CFG      0x0E
#define  MMA8452Q_HP_FILTER_CUTOFF  0x0F
#define  MMA8452Q_PL_STATUS         0x10
#define  MMA8452Q_PL_CFG            0x11
#define  MMA8452Q_PL_COUNT          0x12
#define  MMA8452Q_PL_BF_ZCOMP       0x13
#define  MMA8452Q_P_L_THS_REG       0x14
#define  MMA8452Q_FF_MT_CFG         0x15
#define  MMA8452Q_FF_MT_SRC         0x16
#define  MMA8452Q_FF_MT_THS         0x17
#define  MMA8452Q_FF_MT_COUNT       0x18
#define  MMA8452Q_TRANSIENT_CFG     0x1D
#define  MMA8452Q_TRANSIENT_SRC     0x1E
#define  MMA8452Q_TRANSIENT_THS     0x1F
#define  MMA8452Q_TRANSIENT_COUNT   0x20
#define  MMA8452Q_PULSE_CFG         0x21
#define  MMA8452Q_PULSE_SRC         0x22
#define  MMA8452Q_PULSE_THSX        0x23
#define  MMA8452Q_PULSE_THSY        0x24
#define  MMA8452Q_PULSE_THSZ        0x25
#define  MMA8452Q_PULSE_TMLT        0x26
#define  MMA8452Q_PULSE_LTCY        0x27
#define  MMA8452Q_PULSE_WIND        0x28
#define  MMA8452Q_ASLP_COUNT        0x29
#define  MMA8452Q_CTRL_REG1         0x2A

sl_status_t mma8452q_init(sl_i2cspm_t *i2cspm)
{
  sl_status_t status = SL_STATUS_OK;
  uint8_t temp = 0;
  // If already initialized, return status
  if (mma8452q_is_initialized == true) {
    return SL_STATUS_ALREADY_INITIALIZED;
  }

  // Check for Null pointer
  if (i2cspm == NULL) {
    return SL_STATUS_INVALID_PARAMETER;
  }

  // Update i2cspm instance
  _mma8452q_i2cspm_instance = i2cspm;

  // Check WHO_AM_I register
  status = mma8452q_read_register(MMA8452Q_WHO_AM_I, &temp);
  if (status == SL_STATUS_TRANSMIT) {
    return SL_STATUS_INVALID_PARAMETER;
  }
  if (temp != SL_MMA8452Q_DEVICE_ID) {
    return SL_STATUS_NOT_FOUND;
  }

  if (status != SL_STATUS_OK) {
    return SL_STATUS_TRANSMIT;
  }
  mma8452q_is_initialized = true;

  return SL_STATUS_OK;
}

sl_status_t mma8452q_deinit(void)
{
  sl_status_t status = SL_STATUS_OK;

  if (mma8452q_is_initialized == false) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  // Reset device
  status = mma8452q_write_register(MMA8452Q_CTRL_REG2, 0x40);

  // Must to wait after reset device
  sl_udelay_wait(1000);

  status |= mma8452q_active(false);
  mma8452q_is_initialized = false;

  if (status != SL_STATUS_OK) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t mma8452q_read_register(uint8_t addr, uint8_t *data)
{
  I2C_TransferSeq_TypeDef seq;
  uint8_t i2c_write_data;

  if (_mma8452q_i2cspm_instance == NULL) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  if (data == NULL) {
    return SL_STATUS_INVALID_PARAMETER;
  }
  seq.addr = mma8452q_cfg.dev_addr << 1;
  seq.flags = (uint16_t)I2C_FLAG_WRITE_READ;

  i2c_write_data = addr;

  /*Write buffer*/
  seq.buf[0].data = &i2c_write_data;
  seq.buf[0].len = 1;

  /*Read buffer*/
  seq.buf[1].data = data;
  seq.buf[1].len = 1;

  if (I2CSPM_Transfer(_mma8452q_i2cspm_instance, &seq) != i2cTransferDone) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t mma8452q_write_register(uint8_t addr, uint8_t data)
{
  I2C_TransferSeq_TypeDef seq;
  uint8_t i2c_write_data[2];

  if (_mma8452q_i2cspm_instance == NULL) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  seq.addr = mma8452q_cfg.dev_addr << 1;
  seq.flags = (uint16_t)I2C_FLAG_WRITE;

  i2c_write_data[0] = addr;
  i2c_write_data[1] = data;

  /*Write buffer*/
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = 2;

  if (I2CSPM_Transfer(_mma8452q_i2cspm_instance, &seq) != i2cTransferDone) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t mma8452q_read_block(uint8_t addr, uint8_t num_bytes, uint8_t *data)
{
  I2C_TransferSeq_TypeDef seq;
  uint8_t i2c_write_data;

  if (_mma8452q_i2cspm_instance == NULL) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  if (data == NULL) {
    return SL_STATUS_INVALID_PARAMETER;
  }
  seq.addr = mma8452q_cfg.dev_addr << 1;
  seq.flags = (uint16_t)I2C_FLAG_WRITE_READ;

  i2c_write_data = addr;

  /*Write buffer*/
  seq.buf[0].data = &i2c_write_data;
  seq.buf[0].len = 1;

  /*Read buffer*/
  seq.buf[1].data = data;
  seq.buf[1].len = num_bytes;

  if (I2CSPM_Transfer(_mma8452q_i2cspm_instance, &seq) != i2cTransferDone) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t mma8452q_write_block(uint8_t addr, uint8_t num_bytes, uint8_t *data)
{
  I2C_TransferSeq_TypeDef seq;
  uint8_t i2c_write_data[num_bytes + 1];

  seq.addr = mma8452q_cfg.dev_addr << 1;
  seq.flags = (uint16_t)I2C_FLAG_WRITE;

  i2c_write_data[0] = addr;

  memcpy(&i2c_write_data[1], data, num_bytes);

  /*Write buffer*/
  seq.buf[0].data = i2c_write_data;
  seq.buf[0].len = num_bytes;

  if (I2CSPM_Transfer(_mma8452q_i2cspm_instance, &seq) != i2cTransferDone) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}
